pocket: Reuse authorization URI

In the subsequent commit we will need the full authorization URI so
that we can redirect to it from https://getpocket.com/a/.

https://bugzilla.gnome.org/show_bug.cgi?id=755386